# Avisynth-filters

./: .gitignore  CMakeLists.txt  Colour space XYZ.xlsx  Insert new braces WP - curr.py  Uniform dither.hlsl  functions_c.h  white_point.c
AWP for manual confirm/: Function definition.txt  Main.c  Readme.txt  functions_c.h
AvsPmod macros/: (De)focus.py  Bookmarks to frame.py  Change RGB WP curr frame brace.py  Change RGB WP curr frame_paste.py  Insert WP brace from curr to end.py  Insert WP brace from last bk to end.py  Insert current frame +1.py  Insert current frame -1 .py  Insert last bookmark frame -1 plus newline last bk.py  Insert last bookmark frame -1 plus newline last bk_match start brace.py  Insert last bookmark frame -1.py  Insert last bookmark frame.py  Insert last bookmark frame_match start brace.py  Insert new braces WP - curr - focus - paste - bb.py  Insert new braces WP - curr - focus - paste.py  Insert new braces WP - curr - focus.py  Insert new braces WP - curr.py  Insert new braces WP.py  Jump to selected frame.py  Jump to selected frame_no refresh.py  Mouse select frames around top 2xh.py  Mouse select frames around top.py  Only Insert new braces WP - curr - focus - paste.py  Readme.txt
C White Point/: CMakeLists.txt  Function definition.txt  white_point.c
C_Auto_Gamma/: CMakeLists.txt  Function definition.txt  auto_gamma.c  avisynth_c.h  functions_c.h
C_Auto_Gamma_x64/: Function definition.txt  auto_gamma.c  functions_c.h  white_point.c
C_Auto_Gamma_x64/lib/: AviSynth_x86.lib
C_Circle_Warp_x64/: Function definition  circle_warp.c  functions_c.h
C_Linear_Gamma_x64/: auto_gamma.c  function_c.h  functions_c.h  linear_gamma.c  main.c
C_Luma_Smooth_x64/: Function_definition.txt  luma_smooth.c
C_RGB_Dither_x64/: Function_definition.txt  functions_c.h  rgb_dither.c
C_Saturation_percentiles_x64/: Function definition.txt  functions_c.h  saturation_percentiles.c
C_White_Point/: CMakeLists.txt
C_White_Point_x64/: Function definition  Function definition.txt  Readme.txt  functions_c.h  white_point.c
C_White_Point_x64/avs/: config.h
C_White_Point_x64/lib/: AviSynth_x64.exp  AviSynth_x86.exp
Helper files/: Iframe list gen.html  WP brace change generator.html  WP frames list gen.html  WP_brace_RGB_gamma_conv.html  WP_edits fix.html
Manual Desat/: Function definition.txt  Readme  functions.h  functions_c.h  main.c
Manual WP/: Function definition (AvsPmod).txt  Function definition.txt  Readme.txt  functions_c.h  main.c  white_point.c  xyY_funcs.h
checkmate_x64_v0.9/source/: LICENSE  README.md  checkmate.sln
checkmate_x64_v0.9/source/checkmate/: checkmate.cpp  checkmate.vcxproj  checkmate.vcxproj.filters
